--- a/SpringBoot/springboot_security/springboot_security03_filter/src/main/resources/static/login.html
+++ b/SpringBoot/springboot_security/springboot_security03_filter/src/main/resources/static/login.html
@@ -15,7 +15,7 @@
     </div>
     <div>
         <input type="text" class="form-control" name="verifyCode" required="required" placeholder="验证码">
-        <img src="getVerifyCode" title="看不清，请点我" onclick="refresh(this)" onmouseover="mouseover(this)" />
+        <img src="getVerifyCode" title="看不清，请点我" onclick="refresh(this)" onmouseover="mouseover(this)"/>
     </div>
     <div>
         <label><input type="checkbox" name="remember-me"/>自动登录</label>
@@ -23,9 +23,13 @@
     </div>
 </form>
 <script>
-    function refresh(obj) { obj.src = "getVerifyCode?" + Math.random(); }
+    function refresh(obj) {
+        obj.src = "getVerifyCode?" + Math.random();
+    }
 
-    function mouseover(obj) { obj.style.cursor = "pointer"; }
+    function mouseover(obj) {
+        obj.style.cursor = "pointer";
+    }
 </script>
 </body>
 </html>
