添加mp/mp3，更新security

--- a/SpringBoot/springboot_security/springboot_security/src/main/resources/static/login.html
+++ b/SpringBoot/springboot_security/springboot_security/src/main/resources/static/login.html
@@ -14,6 +14,7 @@
         <div class="col-md-offset-3 col-md-6">
             <form class="form-horizontal" action="/login" method="post">
                 <span class="heading">用户登录</span>
+                <span>默认用户名：demo；密码：123</span>
                 <div class="form-group">
                     <input type="text" class="form-control" name="username" placeholder="用户名" required>
                 </div>
